# aceWebBackend

./: .env_exemplo   README.md  pyproject.toml  requirements.txt
ace_produtos/: admin.py  apps.py  models.py  serializers.py  views.py
ace_produtos/migrations/: 0001_initial.py  0002_marca_produto.py  0002_produto_imagem.py  0003_alter_produto_options.py  0003_produto_cores.py  0004_alter_produto_categoria_alter_produto_marca.py  0004_rename_nome_produto_titulo_remove_produto_autores_and_more.py  0005_alter_produto_options.py  0005_category_gender_product_remove_produto_categoria_and_more.py  0006_remove_product_image_product_images.py  0006_rename_nome_categoria_descricao.py  0007_autor_produto_autores.py  0007_category_cor_gender_cor.py  0008_alter_category_cor.py  0008_alter_produto_autores.py  0009_alter_autor_options_alter_autor_email_and_more.py  0009_remove_category_cor_remove_gender_cor_category_color_and_more.py  0010_category_url_gender_url.py  0011_alter_category_color.py  0012_product_type_alter_category_color_alter_gender_color.py  0013_highlight.py  0014_highlight_type_img_highlight_type_product.py  0015_alter_highlight_type_img_and_more.py  0016_alter_highlight_type_img.py  0017_typeaccessory_alter_category_color_and_more.py  0018_product_type_accessory.py  0019_alter_product_type_accessory.py  0020_product_new_product_offer.py  0021_remove_product_type_accessory_alter_product_type.py  0022_product_type_accessory_alter_product_type.py
ace_produtos/models/: __init__.py  categoria.py  category.py  gender.py  highlight.py  marca.py  product.py  produto.py  type_accessory.py
ace_produtos/serializers/: __init__.py  autor_serializer.py  categoria_serializer.py  category_serializer.py  gender_serializer.py  highlight_serializer.py  marca_serializer.py  product_serializer.py  produto_serializer.py  type_accessory_serializer.py
ace_produtos/views/: __init__.py  autor_view.py  categoria_view.py  category_view.py  gender_view.py  highlight_view.py  marca_view.py  product_view.py  produto_view.py  type_accessory_view.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
